# wayfire

./: .gitignore  .gitmodules  STATUS.md  meson.build
compat/linux/: drm-detect.h  input-event-codes.h  input.h
metadata/: core.xml  decoration.xml  input.xml  vswitch.xml
plugins/decor/: deco-layout.cpp  deco-layout.hpp  deco-subsurface.cpp  deco-theme.cpp  deco-theme.hpp
plugins/ipc/: stipc.cpp
plugins/protocols/: session-lock.cpp  wayfire-shell.cpp
plugins/vswitch/wayfire/plugins/: vswitch.hpp
plugins/window-rules/: view-action-interface.cpp
proto/: wayfire-shell-unstable-v2.xml
src/: geometry.cpp  main.cpp  meson.build
src/api/wayfire/: platform-backend.hpp  seat.hpp
src/compat/: drm-detect-freebsd.cpp
src/core/: core.cpp  logger.cpp  logger.hpp  window-manager.cpp
src/core/seat/: cursor.cpp  cursor.hpp  pointer.hpp  seat.cpp
src/platform/: platform-factory.cpp  platform-freebsd.cpp  platform-linux.cpp
test/geometry/: geometry_test.cpp  region_test.cpp
test/misc/: action-test.cpp  condition-test.cpp  lexer-test.cpp  meson.build  nonstd-test.cpp  rule-test.cpp  variant-test.cpp
test/misc/platform/: meson.build  platform-test.cpp  wayfire-platform-test.cpp
test/protocol/: meson.build
